--- a/indbydelse-tilmelding-2024.qmd
+++ b/indbydelse-tilmelding-2024.qmd
@@ -349,7 +349,7 @@ Fra kl. 19 vil der være stor fest! Festen starter samme sted som turneringen af
 -   Kl. 22 bliver vi afhentet i bus fra Miller's Pub, som kører ind mod Aarhus C.
 -   Kl. 22:30 'starter' vi på Die Bierbar og får et JAGTTEN, hvilket er et knivskarpt tilbud til kun kr. 100 inden kl. 23. Dette er for egen regning, ligesom resten af aftenen. Se tilbuddet herunder.
 
-Aldersgrænsen for festen er 16 år (bytur 18 år). Hvis man er 16 eller 17 år, udleveres kun alkohol med en skriftlig tilladelse fra forældre/værge, som enten kan sendes til kontaktpersonen eller medbringes på selve dagen.
+Aldersgrænsen for festen er 16 år (bytur 18 år). Hvis man er 16 eller 17 år, udleveres kun alkohol med en skriftlig tilladelse fra forældre/værge, som enten kan sendes til kontaktpersonen (se @tbl-kontaktperson) eller medbringes på selve dagen.
 :::
 
 ::: {#fig-fest-om-aftenen}
