--- a/indbydelse-tilmelding-2023.qmd
+++ b/indbydelse-tilmelding-2023.qmd
@@ -63,7 +63,7 @@ DataBilletKatAkt_T %>%
     "Mikrogebyrer pålægges alle priser."),
     general_title = "", escape = F) %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
-	column_spec(1:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V)) %>%
+	column_spec(1:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";")) %>%
   remove_column(4)
 
 data.frame(
@@ -121,13 +121,12 @@ data.frame(
         IkonTimeglas_V, " Tidsplan<br>",
         "<i style=font-size:75%>Bemærk: Tidsplan kan ændres en smule alt efter deltagerantal.</i>")) %>%
 	kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
-	column_spec(1, width_min = "1em") %>%
-	column_spec(2, width_min = "7em") %>%
+	column_spec(2, extra_css = "white-space:nowrap;") %>%
 	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(6, bold = T) %>%
 	row_spec(c(1, 9), bold = T, background = DataEventAarAkt_T$EventAarFarve2_RD, color = "#000000",
-  extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";border-bottom:0.7px solid ", TabelFarveKant_V)) %>%
-	column_spec(2:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V))
+  extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";border-bottom:0.7px solid ", TabelFarveKant_V, ";")) %>%
+	column_spec(2:3, extra_css = paste0("border-top:0.7px solid ", TabelFarveKant_V, ";"))
 ```
 :::
 
@@ -184,7 +183,7 @@ data.frame(
         "<i style=font-size:80%>Evt. spørgsmål til kontaktperson</i>")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
-  column_spec(1:2, extra_css = "border:hidden")
+  column_spec(1:2, extra_css = "border:hidden;")
 
 data.frame(
   "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/staevneleder.png height=66 style=border-radius:10px>"),
@@ -201,7 +200,7 @@ data.frame(
         "<i style=font-size:80%>Ansvarlig på stævnedagen</i>")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
-  column_spec(1:2, extra_css = "border:hidden")
+  column_spec(1:2, extra_css = "border:hidden;")
 
 data.frame(
   "1" = paste0("<img src=filer/event/", egen_sti_fun(DataEventAarAkt_T$EventAar_RD), "/lokation.png height=66 style=border-radius:10px>"),
@@ -213,7 +212,7 @@ data.frame(
         "<i style=font-size:80%>Geografisk placering</i>")) %>%
   kable_styling(position = "l", full_width = F, htmltable_class = "table-condensed") %>%
   column_spec(1, width_min = "5.5em") %>%
-  column_spec(1:2, extra_css = "border:hidden")
+  column_spec(1:2, extra_css = "border:hidden;")
 ```
 
 </div>
